projects/compiler/test/parser/accessor_error_self.out
Error at %FILE_NAME%:1:3
Unexpected token 'self', expected 'identifier':
  |  a.self.b
       ^